2006-08-03  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_HasIdOf.py: Cleanup.
	* src/Filters/Rules/Person/__init__.py (editor_rule_list): Add
	RegExpIdOf.
	* src/Filters/Rules/Person/_RegExpIdOf.py: Cleanup.
	* src/Filters/Rules/_RegExpIdBase.py: Cleanup.
	* src/Filters/Rules/Person/_HasRelationship.py: Cleanup.
	* src/Filters/Rules/Family/_HasIdOf.py: Cleanup.
	* src/Filters/Rules/Family/_RegExpIdOf.py: Cleanup.
	* src/FilterEditor/_EditRule.py: Clean, localization fixes, ID
	selection fixes.
	* src/NameDisplay.py: Import gettext.
	* src/Filters/Rules/Family/_HasRelType.py (labels): Use lowercase.
	* src/FilterEditor/_EditFilter.py (on_add_clicked,
	on_edit_clicked): Catch exception.

2006-08-03  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/plugins/Check.py (cleanup_deleted_name_formats): Change hardcoded
	values with constants.
	* src/GrampsCfg.py: Unused constants cleanup.
	* src/DataViews/_PedigreeView.py (__init__): connection to "active-
	person-changed" signal moved to set_active()
	(set_active, set_inactive): Improve performance of other views.
	* src/NameDisplay.py (name_grouping_data): Change hardcoded values
	with constants.

2006-08-03  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayTabs/_BackRefList.py (find_node): Use class name.
	* src/DisplayTabs/_BackRefModel.py (__init__, load_model): Add new
	column to keep both class name and translation.

2006-08-02  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Disable scrollkeeper update in the packager mode.

2006-08-01  Don Allingham  <don@gramps-project.org>
	* src/RelLib/_Place.py: Check for empty location
	* src/Editors/_EditEvent.py: use default data change check
	* src/DataViews/_PersonView.py: use grouping name
	* src/NameDisplay.py: Add grouping from data instead of just Name
	instance, handle Name.DEF
	* src/DisplayModels/_PeopleModel.py: use grouping name

2006-08-01  Alex Roitman  <shura@gramps-project.org>